# AkisVG

./: .gitignore  .ninja_log  CMakeLists.txt  CONTRIBUTING.md  README.md  README_FIXES.md  SECURITY.md  debug_run.sh  resources.qrc
.cmake/api/v1/reply.prev/: cache-v2-6fb55d5a3d516b89b640.json  cmakeFiles-v1-63d08b0d6dfda5e66247.json  directory-.-Build-87a255c8e7f92ced5c85.json  index-2026-03-05T23-53-14-0841.json  target-AkisVG_autogen-Build-5ec1054e9b25e78f3a98.json  target-AkisVG_autogen_timestamp_deps-Build-a16ffb92d1cb9209759e.json  target-OpenGL__GL-Build-07230fc53995c9c1be39.json  target-Qt6__Concurrent-Build-04a6c1068c76b46c5bc2.json  target-Qt6__Gui-Build-255ab14275ffddeb06bd.json  target-Qt6__Multimedia-Build-3a6d202ac14376d2b515.json  target-Qt6__QEglFSEmulatorIntegrationPlugin-Build-3c48f7b7c85eb35fcab6.json  target-Qt6__QEglFSKmsGbmIntegrationPlugin-Build-fd38583d010f3d0e0053.json  target-Qt6__QEglFSX11IntegrationPlugin-Build-95e6dd7aceba7b07f9d1.json  target-Qt6__QEvdevKeyboardPlugin-Build-1a72251df0c952cc129a.json  target-Qt6__QEvdevMousePlugin-Build-6d3d8aad8cf19681f39c.json  target-Qt6__QEvdevTouchScreenPlugin-Build-9bdcd21493e2a99c117c.json  target-Qt6__QGifPlugin-Build-91156c5b5abcf004007c.json  target-Qt6__QICNSPlugin-Build-3996786edaa806aa5b27.json  target-Qt6__QICOPlugin-Build-8ee43d78208597685bfe.json  target-Qt6__QIbusPlatformInputContextPlugin-Build-8d433c4454ae36c92128.json  target-Qt6__QJpegPlugin-Build-da01694bc4a30157d722.json  target-Qt6__QMinimalEglIntegrationPlugin-Build-2c080f35ef22145cc0c8.json  target-Qt6__QOffscreenIntegrationPlugin-Build-25ee4e04090ba3e2e6c7.json  target-Qt6__QSvgIconPlugin-Build-29080663bd94f5395162.json  target-Qt6__QSvgPlugin-Build-66736291f8e48cd55a35.json  target-Qt6__QTgaPlugin-Build-f5f0c5f8bbbbc926e40a.json  target-Qt6__QTiffPlugin-Build-72443a1647fdaf92f9e0.json  target-Qt6__QTlsBackendCertOnlyPlugin-Build-bb4ed5bcb598bd5026f3.json  target-Qt6__QTlsBackendOpenSSLPlugin-Build-36d5a0cfe583463c773a.json  target-Qt6__QTsLibPlugin-Build-604b731768831aaadd26.json  target-Qt6__QTuioTouchPlugin-Build-8702200c18db2988ea97.json  target-Qt6__QVkKhrDisplayIntegrationPlugin-Build-7e2a213e35a0bb30549a.json  target-Qt6__QWaylandIntegrationPlugin-Build-18a03bc9db04bd1d6c9b.json  target-Qt6__QWbmpPlugin-Build-7d742d9801fbc2291f55.json  target-Qt6__QXcbEglIntegrationPlugin-Build-82950afb73613310150e.json  (+24 more)
.github/workflows/: release.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qtc_clangd/: compile_commands.json
Source Files/canvas/: vectorcanvas.cpp
Source Files/canvas/objects/: pathobject.cpp
Source Files/src/: main.cpp  mainwindow.cpp
assets/: WHY.txt
src/: TODO.txt  config.h  main.cpp  mainwindow.cpp  mainwindow.h
src/canvas/: canvasview.cpp  canvasview.h  splineoverlay.cpp  splineoverlay.h  vectorcanvas.cpp  vectorcanvas.h
src/canvas/objects/: gradientobject.cpp  gradientobject.h  imageobject.cpp  imageobject.h  objectgroup.cpp  objectgroup.h  pathobject.cpp  pathobject.h  shapeobject.cpp  shapeobject.h  textobject.cpp  textobject.h  transformableimageobject.cpp  transformableimageobject.h  vectorobject.cpp  vectorobject.h
src/core/: commands.cpp  commands.h  frame.cpp  frame.h  interpolation.cpp  interpolation.h  interpolationmanager.cpp  interpolationmanager.h  layer.cpp  layer.h  layer.h.rej  project.cpp  project.h
src/io/: gifexporter.cpp  gifexporter.h
src/panels/: assetlibrary.cpp  assetlibrary.h  colorpicker.cpp  colorpicker.h  layerpanel.cpp  layerpanel.h  settingspanel.cpp  settingspanel.h  toolbox.cpp  toolbox.h  toolbutton.cpp  toolbutton.h  toolsettingspanel.cpp  toolsettingspanel.h
src/timeline/: timelinewidget.cpp  timelinewidget.h  timelinewidgit.cpp
src/tools/: blendtool.cpp  blendtool.h  brushtool.cpp  brushtool.h  erasertool.cpp  erasertool.h  eyedroppertool.cpp  eyedroppertool.h  filltool.cpp  filltool.h  gradienttool.cpp  gradienttool.h  lassotool.cpp  lassotool.h  linetool.cpp  linetool.h  liquifytool.cpp  liquifytool.h  magicwandtool.cpp  magicwandtool.h  penciltool.cpp  penciltool.h  selecttool.cpp  selecttool.h  shapetool.cpp  shapetool.h  texttool.cpp  texttool.h  tool.cpp  tool.h
src/tools/assets/AddFrame/: AddFrame.af
src/ui/: exportdialog.cpp  exportdialog.h  preferencesdialog.cpp  preferencesdialog.h  startupdialog.cpp  startupdialog.h  startupscreen.cpp  startupscreen.h
src/utils/: thememanager.cpp  thememanager.h
tools/: selecttool.h  texttool.cpp
(+349 files in other folders)
